--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "framer-motion": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1",
+    "store": "^2.0.12",
     "styled-components": "^5.1.1"
   },
   "scripts": {
