New new new new

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Matt Argomaniz",
-  "name": "I'm Matt, & this is my design portfolio.",
+  "name": "Hello, I'm Matt. This is my design portfolio.",
   "icons": [
     {
       "src": "favicon.ico",
